--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -201,6 +201,7 @@
             <h6 class="text-muted mb-2">Import Configuration</h6>
             <p class="small">Upload a previously exported configuration file</p>
             <form action="/import" method="POST" enctype="multipart/form-data">
+              <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
               <div class="input-group">
                 <input type="file" name="file" class="form-control" required>
                 <button type="submit" class="btn btn-primary">
