--- a/app/templates/edit_config.html
+++ b/app/templates/edit_config.html
@@ -16,6 +16,7 @@
 {% endif %}
 
 <form id="configForm" method="POST" action="/edit-config">
+  <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
   <div class="row">
     <div class="col-lg-6">
       <div class="card mb-4">
