--- a/app/templates/users.html
+++ b/app/templates/users.html
@@ -151,6 +151,7 @@
       </div>
       <form action="/users/add" method="post">
         <div class="modal-body">
+          <input type="hidden" name="csrf_token" value="{{ csrf_token() }}"/>
           <div class="mb-3">
             <label for="username" class="form-label">Username</label>
             <input type="text" class="form-control" id="username" name="username" required>
